starting merging sc + reg styles in one file

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,7 +1,15 @@
+Integreate old files + sc
+check ogoneks
+compatibility
+Saltillos
+
 Starting greek:
 	-extrapolate fake thin from Alegreya Serif
-	-
+
 Expanding to latin exp:
 	-Merge the two .glyphs in one file
 	-separate again regs + italics
 	-steal kerning and metric groups
+
+End
+	-Custom parameters for SC
