--- a/Todo.txt
+++ b/Todo.txt
@@ -2,6 +2,7 @@ Integreate old files + sc
 check ogoneks
 compatibility
 Saltillos
+Check arrows drawings
 
 Starting greek:
 	-extrapolate fake thin from Alegreya Serif
@@ -13,3 +14,4 @@ Expanding to latin exp:
 
 End
 	-Custom parameters for SC
+	-new arrows ss0X combs
