first draft of lowercase greek

--- a/Todo.txt
+++ b/Todo.txt
@@ -14,3 +14,4 @@ Expanding to latin exp:
 End
 	-Custom parameters for SC
 	-new arrows ss0X combs
+	-check if some latin glyphs have been re-interpolated
