--- a/Todo.txt
+++ b/Todo.txt
@@ -1,4 +1,3 @@
-Integreate old files + sc
 check ogoneks
 compatibility
 Saltillos
@@ -6,12 +5,7 @@ Saltillos
 Starting greek:
 	-extrapolate fake thin from Alegreya Serif
 
-Expanding to latin exp:
-	-Merge the two .glyphs in one file
-	-separate again regs + italics
-	-steal kerning and metric groups
-
 End
-	-Custom parameters for SC
+	-Custom parameters for SC exporting
 	-new arrows ss0X combs
 	-check if some latin glyphs have been re-interpolated
