glyphs + cont in regs

--- a/Todo.txt
+++ b/Todo.txt
@@ -13,3 +13,4 @@ Ending
 	-Custom parameters for SC exporting
 	-new arrows ss0X combs
 	-check if some latin glyphs have been re-interpolated
+	-Q.corta
